--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,23 @@
 spring.application.name=heartbound2
+
+server.port=8080
+server.servlet.context-path=/api
+
+spring.datasource.url=jdbc:postgresql://postgres:5432/heartbound
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.hibernate.ddl-auto=update
+
+# JWT Configuration
+jwt.secret=dev_secret_key
+jwt.access-token-expiration-ms=900000
+jwt.refresh-token-expiration-ms=2592000000
+
+# CORS Configuration
+cors.allowed-origins=http://localhost:3000
+cors.max-age=3600
+cors.allow-credentials=true
+
+# Logging
+logging.level.org.springframework.security=DEBUG
+logging.level.com.app.heartbound=DEBUG
