--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -21,3 +21,9 @@ cors.allow-credentials=true
 # Logging
 logging.level.org.springframework.security=DEBUG
 logging.level.com.app.heartbound=DEBUG
+
+# Discord OAuth settings
+discord.client-id=YOUR_DISCORD_CLIENT_ID
+discord.client-secret=YOUR_DISCORD_CLIENT_SECRET
+discord.redirect-uri=http://localhost:8080/api/oauth2/callback/discord
+discord.scopes=identify email
