--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -63,6 +63,11 @@
 			<artifactId>spring-boot-starter-websocket</artifactId>
 		</dependency>
 		<dependency>
+       		<groupId>org.springdoc</groupId>
+       		<artifactId>springdoc-openapi-ui</artifactId>
+       		<version>1.6.15</version>
+   		</dependency>
+		<dependency>
 			<groupId>org.thymeleaf.extras</groupId>
 			<artifactId>thymeleaf-extras-springsecurity6</artifactId>
 		</dependency>
