Added Logging to OAuthController and OAuthService - also adjusted the AuthProvider to handle OAuth Callback

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -26,4 +26,4 @@ logging.level.com.app.heartbound=DEBUG
 discord.client-id=YOUR_DISCORD_CLIENT_ID
 discord.client-secret=YOUR_DISCORD_CLIENT_SECRET
 discord.redirect-uri=http://localhost:8080/api/oauth2/callback/discord
-discord.scopes=identify email
+discord.scopes=identify email guilds.join guilds
