Fixed Rollup Error (whatever it was) - able to open up frontend with docker now along with backend

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,14 +4,16 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "ROLLUP_SKIP_NATIVE=1 vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.2",
+    "@rollup/rollup-linux-x64-gnu": "npm:@rollup/wasm-node",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.0",
-    "frontend": "file:",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
@@ -29,5 +31,8 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
     "vite": "^5.4.14"
+  },
+  "resolutions": {
+    "rollup": "npm:@rollup/wasm-node"
   }
 }
