--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -1,10 +1,22 @@
-FROM node:20-alpine
+FROM node:18-bullseye
 
 WORKDIR /app
 
-COPY package.json package-lock.json ./
-RUN npm install
+# Yarn is already installed in this Node image, so we don't need to install it again.
+# RUN npm install -g yarn
 
+# Copy package files first; since there's no yarn.lock, Yarn will generate one
+COPY package.json ./
+RUN yarn install
+
+# Copy the rest of the source code
 COPY . .
 
-CMD ["npm", "run", "dev"]
+# Expose port 3000
+EXPOSE 3000
+
+# Set environment variable to skip native Rollup module loading
+ENV ROLLUP_SKIP_NATIVE=1
+
+# Run the Vite dev server explicitly on port 3000 and bind to 0.0.0.0
+CMD ["yarn", "dev", "--", "--host", "0.0.0.0", "--port", "3000"]
