Attempting to fix refresh token exchange

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -23,7 +23,7 @@ logging.level.org.springframework.security=DEBUG
 logging.level.com.app.heartbound=DEBUG
 
 # Discord OAuth settings
-discord.client-id=YOUR_DISCORD_CLIENT_ID
-discord.client-secret=YOUR_DISCORD_CLIENT_SECRET
+discord.client-id=${DISCORD_CLIENT_ID}
+discord.client-secret=${DISCORD_CLIENT_SECRET}
 discord.redirect-uri=http://localhost:8080/api/oauth2/callback/discord
 discord.scopes=identify email guilds.join guilds
