Added new Connection Status, and Notification Banner for WebSocket. Added debugging for backend as well

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,12 +22,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.7",
-    "frontend": "file:",
+    "frontend": "file:.",
     "lucide-react": "^0.475.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.22.0",
+    "rollup": "npm:@rollup/wasm-node",
     "sockjs-client": "^1.6.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
