Working on RefreshToken

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,6 +12,7 @@ spring.jpa.hibernate.ddl-auto=update
 jwt.secret=dev_secret_key
 jwt.access-token-expiration-ms=900000
 jwt.refresh-token-expiration-ms=2592000000
+jwt.refresh-secret=dev_refresh_secret_key
 
 # CORS Configuration
 cors.allowed-origins=http://localhost:3000
