--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "lucide-react": "^0.475.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.22.0",
     "rollup": "npm:@rollup/wasm-node",
