--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -28,3 +28,6 @@ discord.client-id=${DISCORD_CLIENT_ID}
 discord.client-secret=${DISCORD_CLIENT_SECRET}
 discord.redirect-uri=http://localhost:8080/api/oauth2/callback/discord
 discord.scopes=identify email guilds.join guilds
+
+# Admin configuration
+admin.discord.id=${ADMIN_DISCORD_ID}
