--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "esbuild": "0.25.1",
     "framer-motion": "^12.4.10",
     "frontend": "file:",
     "lucide-react": "^0.475.0",
