Auth Optimizatiosn - Backend - implemented Rate Filter

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -31,3 +31,8 @@ discord.scopes=identify email guilds.join guilds
 
 # Admin configuration
 admin.discord.id=${ADMIN_DISCORD_ID}
+
+# Rate Limiting Configuration
+rate.limit.max-requests=100
+rate.limit.window-minutes=1
+rate.limit.cleanup-interval-ms=300000
