--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -35,4 +35,5 @@ admin.discord.id=${ADMIN_DISCORD_ID}
 # Rate Limiting Configuration
 rate.limit.max-requests=100
 rate.limit.window-minutes=1
-rate.limit.cleanup-interval-ms=300000
+rate.limit.burst-capacity=120
+rate.limit.cleanup-interval-ms=3600000
