Auth Optimization - Backend - Bucket4j and Caffeine Rate limiting (COMPLETETE)

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -37,3 +37,4 @@ rate.limit.max-requests=100
 rate.limit.window-minutes=1
 rate.limit.burst-capacity=120
 rate.limit.cleanup-interval-ms=3600000
+rate.limit.cache-maximum-size=100000
