Implemented Discord bot into Pom.xml

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -69,6 +69,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.zgamelogic</groupId>
+			<artifactId>spring-boot-starter-discord</artifactId>
+			<version>1.4.5</version>
+		</dependency>
+
+		<dependency>
     		<groupId>io.jsonwebtoken</groupId>
     		<artifactId>jjwt</artifactId>
     		<version>0.9.1</version>
