--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -38,3 +38,13 @@ rate.limit.window-minutes=1
 rate.limit.burst-capacity=120
 rate.limit.cleanup-interval-ms=3600000
 rate.limit.cache-maximum-size=100000
+
+# Discord Bot Configuration (Values sourced from .env)
+discord.token=${DISCORD_BOT_TOKEN}
+discord.server.id=${DISCORD_SERVER_ID}
+discord.category.id=${DISCORD_CATEGORY_ID}
+# Explicitly define required Gateway Intents for the starter
+discord.gateway-intents=GUILD_MEMBERS,GUILD_VOICE_STATES,MESSAGE_CONTENT
+
+# Enable debug logging for the Discord starter
+logging.level.com.zgamelogic=DEBUG
