--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -46,5 +46,7 @@ discord.category.id=${DISCORD_CATEGORY_ID}
 # Explicitly define required Gateway Intents for the starter
 discord.gateway-intents=GUILD_MEMBERS,GUILD_VOICE_STATES,MESSAGE_CONTENT
 
+frontend.base.url=http://localhost:3000
+
 # Enable debug logging for the Discord starter
 logging.level.com.zgamelogic=DEBUG
