Implementing RIOT API - Backend Complete, needs testing

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -50,3 +50,12 @@ frontend.base.url=http://localhost:3000
 
 # Enable debug logging for the Discord starter
 logging.level.com.zgamelogic=DEBUG
+
+# Riot Games OAuth2 Configuration
+riot.client.id=${RIOT_CLIENT_ID} # Source from environment variable or secrets manager
+riot.client.secret=${RIOT_CLIENT_SECRET} # Source from environment variable or secrets manager
+riot.redirect.uri=http://localhost:8080/api/oauth2/callback/riot
+riot.scope=openid account # Adjust scopes as needed (openid for ID token, account for user info)
+riot.authorization.uri=https://auth.riotgames.com/authorize
+riot.token.uri=https://auth.riotgames.com/token
+riot.userinfo.uri=https://americas.api.riotgames.com/riot/account/v1/accounts/me # Confirm region if necessary
