RIOT implementation - backend successfully starts

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -52,10 +52,14 @@ frontend.base.url=http://localhost:3000
 logging.level.com.zgamelogic=DEBUG
 
 # Riot Games OAuth2 Configuration
-riot.client.id=${RIOT_CLIENT_ID} # Source from environment variable or secrets manager
-riot.client.secret=${RIOT_CLIENT_SECRET} # Source from environment variable or secrets manager
+riot.client.id=${RIOT_CLIENT_ID:dev-mode} # Will use "dev-mode" when env variable not set
+riot.client.secret=${RIOT_CLIENT_SECRET:dev-mode} # Will use "dev-mode" when env variable not set
 riot.redirect.uri=http://localhost:8080/api/oauth2/callback/riot
-riot.scope=openid account # Adjust scopes as needed (openid for ID token, account for user info)
+riot.scope=openid account
 riot.authorization.uri=https://auth.riotgames.com/authorize
 riot.token.uri=https://auth.riotgames.com/token
-riot.userinfo.uri=https://americas.api.riotgames.com/riot/account/v1/accounts/me # Confirm region if necessary
+riot.userinfo.uri=https://americas.api.riotgames.com/riot/account/v1/accounts/me
+
+# Riot API Configuration
+riot.api.key=${RIOT_API_KEY:RGAPI-09fbf3da-6b8f-48fe-90ad-e79f85e0f3fe}
+riot.dev.mode=true
