RIOT implementation - OAuth implemented, still need clientid and clientsecret

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -62,4 +62,4 @@ riot.userinfo.uri=https://americas.api.riotgames.com/riot/account/v1/accounts/me
 
 # Riot API Configuration
 riot.api.key=${RIOT_API_KEY:RGAPI-09fbf3da-6b8f-48fe-90ad-e79f85e0f3fe}
-riot.dev.mode=true
+riot.dev.mode=false
