RIOT Implementation - Backend - Background tracking logic, userService to add credits, created ValorantPartyTrackingService.java, enabled scheduling

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -63,3 +63,10 @@ riot.userinfo.uri=https://americas.api.riotgames.com/riot/account/v1/accounts/me
 # Riot API Configuration
 riot.api.key=${RIOT_API_KEY:RGAPI-09fbf3da-6b8f-48fe-90ad-e79f85e0f3fe}
 riot.dev.mode=false
+
+# Valorant Party Tracking Configuration
+valorant.tracking.schedule.fixed-delay-ms=60000 # Run every 60 seconds
+valorant.tracking.reward.credits=10           # Credits awarded per completed game
+valorant.tracking.min-participants=2          # Minimum linked participants to track
+valorant.tracking.match-history.limit=5       # How many recent matches to check per player
+valorant.tracking.match-start.threshold-minutes=15 # How far back (minutes) to look for potential match starts
