Adjusting Prod application.properties

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -4,9 +4,9 @@ server.port=${PORT:8080}
 server.servlet.context-path=/api
 
 # Heroku PostgreSQL Configuration
-spring.datasource.url=${JDBC_DATABASE_URL:jdbc:postgresql://localhost:5432/heartbound}
-spring.datasource.username=${JDBC_DATABASE_USERNAME:postgres}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD:postgres}
+spring.datasource.url=jdbc:postgresql://${JDBC_DATABASE_URL}:${JDBC_PORT}/${JDBC_DATABASE_NAME}
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
