Adjusted redirection in backend to use our new frontend url

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -22,7 +22,7 @@ jwt.refresh-token-expiration-ms=2592000000
 jwt.refresh-secret=${JWT_REFRESH_SECRET:changeme_in_production}
 
 # CORS Configuration - Update with your production frontend URL
-cors.allowed-origins=${FRONTEND_URL:https://heartbound-app.vercel.app}
+cors.allowed-origins=${FRONTEND_URL:https://heartbound-jet.vercel.app}
 cors.max-age=3600
 cors.allow-credentials=true
 
@@ -55,7 +55,7 @@ discord.category.id=${DISCORD_CATEGORY_ID}
 discord.gateway-intents=GUILD_MEMBERS,GUILD_VOICE_STATES,MESSAGE_CONTENT
 
 # Frontend URL for all redirects and callbacks
-frontend.base.url=${FRONTEND_URL:https://heartbound-app.vercel.app}
+frontend.base.url=${FRONTEND_URL:https://heartbound-jet.vercel.app}
 
 # Heroku-specific configurations
 spring.mvc.async.request-timeout=60000
