Attempting to fix redirect auth not working

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -46,6 +46,7 @@ discord.category.id=${DISCORD_CATEGORY_ID}
 # Explicitly define required Gateway Intents for the starter
 discord.gateway-intents=GUILD_MEMBERS,GUILD_VOICE_STATES,MESSAGE_CONTENT
 
+# Frontend URL for all redirects and callbacks
 frontend.base.url=http://localhost:3000
 
 # Enable debug logging for the Discord starter
