Implementing images into Discord Embed, needs testing

--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -2,3 +2,10 @@
 spring.security.oauth2.client.registration.fusionauth.client-id=
 spring.security.oauth2.client.registration.fusionauth.client-secret=
 spring.security.oauth2.client.provider.fusionauth.issuer-uri= 
+
+# Static Resources Configuration for development
+spring.web.resources.static-locations=classpath:/static/
+spring.mvc.static-path-pattern=/**
+# Disable cache for development to see changes immediately
+spring.web.resources.cache.period=0
+spring.web.resources.chain.cache=false 
