--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -51,3 +51,9 @@ frontend.base.url=http://localhost:3000
 
 # Enable debug logging for the Discord starter
 logging.level.com.zgamelogic=DEBUG
+
+# Static Resources Configuration
+spring.web.resources.static-locations=classpath:/static/
+spring.mvc.static-path-pattern=/**
+spring.web.resources.cache.period=3600
+spring.web.resources.chain.enabled=true
