Fixed Backend URL to work with production for the embed

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -57,5 +57,8 @@ discord.gateway-intents=GUILD_MEMBERS,GUILD_VOICE_STATES,MESSAGE_CONTENT
 # Frontend URL for all redirects and callbacks
 frontend.base.url=${FRONTEND_URL:https://heartbound-jet.vercel.app}
 
+# Backend URL for all redirects and callbacks
+backend.base.url=${BACKEND_URL:https://heartbound-d00f1b55e2ad.herokuapp.com/api}
+
 # Heroku-specific configurations
 spring.mvc.async.request-timeout=60000
