--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -57,3 +57,6 @@ spring.web.resources.static-locations=classpath:/static/
 spring.mvc.static-path-pattern=/**
 spring.web.resources.cache.period=3600
 spring.web.resources.chain.enabled=true
+
+# Add this line near the frontend.base.url property
+backend.base.url=http://localhost:8080/api
