--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -9,3 +9,6 @@ spring.mvc.static-path-pattern=/**
 # Disable cache for development to see changes immediately
 spring.web.resources.cache.period=0
 spring.web.resources.chain.cache=false 
+
+# Adding Backend URL Environment Variable
+backend.base.url=http://localhost:8080/api 
