Impelemented ChatActivityListener.java, credits will be modified based on messages

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -62,3 +62,11 @@ backend.base.url=${BACKEND_URL:https://heartbound-d00f1b55e2ad.herokuapp.com/api
 
 # Heroku-specific configurations
 spring.mvc.async.request-timeout=60000
+
+# Chat Activity Rewards Configuration - More conservative in production
+discord.activity.enabled=true
+discord.activity.credits-to-award=5
+discord.activity.message-threshold=15
+discord.activity.time-window-minutes=120
+discord.activity.cooldown-seconds=60
+discord.activity.min-message-length=20
