--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -60,3 +60,11 @@ spring.web.resources.chain.enabled=true
 
 # Add this line near the frontend.base.url property
 backend.base.url=http://localhost:8080/api
+
+# Chat Activity Rewards Configuration
+discord.activity.enabled=true
+discord.activity.credits-to-award=5
+discord.activity.message-threshold=10
+discord.activity.time-window-minutes=60
+discord.activity.cooldown-seconds=30
+discord.activity.min-message-length=15
