--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -68,3 +68,11 @@ discord.activity.message-threshold=10
 discord.activity.time-window-minutes=60
 discord.activity.cooldown-seconds=30
 discord.activity.min-message-length=15
+
+# Leveling System Configuration
+discord.leveling.enabled=true
+discord.leveling.xp-to-award=15
+discord.leveling.base-xp=100
+discord.leveling.level-multiplier=50
+discord.leveling.level-exponent=2
+discord.leveling.level-factor=5
