Changed application.properties to create new tables

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -76,3 +76,6 @@ discord.leveling.base-xp=100
 discord.leveling.level-multiplier=50
 discord.leveling.level-exponent=2
 discord.leveling.level-factor=5
+
+# Consider this change for production
+spring.jpa.properties.hibernate.schema_update.unique_constraint_strategy=RECREATE_QUIETLY
