--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-image-crop": "^11.0.10",
     "react-router-dom": "^6.22.0",
     "rollup": "npm:@rollup/wasm-node",
     "sockjs-client": "^1.6.1",
