--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -70,3 +70,11 @@ discord.activity.message-threshold=15
 discord.activity.time-window-minutes=120
 discord.activity.cooldown-seconds=60
 discord.activity.min-message-length=20
+
+# Leveling System Configuration
+discord.leveling.enabled=true
+discord.leveling.xp-to-award=15
+discord.leveling.base-xp=100
+discord.leveling.level-multiplier=50
+discord.leveling.level-exponent=2
+discord.leveling.level-factor=5
