Refactored Credit award system - everytime a user levels up they recieve credits

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -78,3 +78,4 @@ discord.leveling.base-xp=100
 discord.leveling.level-multiplier=50
 discord.leveling.level-exponent=2
 discord.leveling.level-factor=5
+discord.leveling.credits-per-level=50
