Added HMR to backend, mounted backend to volume

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
       - postgres
     env_file:
       - ./backend/.env
+    volumes:
+      - ./backend/src:/app/src
 
   frontend:
     build:
