--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -59,10 +59,10 @@
 			<artifactId>spring-boot-starter-websocket</artifactId>
 		</dependency>
 		<dependency>
-       		<groupId>org.springdoc</groupId>
-       		<artifactId>springdoc-openapi-ui</artifactId>
-       		<version>1.6.15</version>
-   		</dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.5.0</version>
+		</dependency>
 		<dependency>
 			<groupId>org.thymeleaf.extras</groupId>
 			<artifactId>thymeleaf-extras-springsecurity6</artifactId>
