Adjusted JWT configuration to use proper variables

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -16,10 +16,10 @@ spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.idle-timeout=30000
 
 # JWT Configuration - Use environment variables for security
-jwt.secret=${JWT_SECRET:replace_with_your_very_strong_64_byte_access_secret_key_for_prod}
+jwt.secret=${JWT_SECRET}
 jwt.access-token-expiration-ms=900000
 jwt.refresh-token-expiration-ms=2592000000
-jwt.refresh-secret=${JWT_REFRESH_SECRET:replace_with_your_different_very_strong_64_byte_refresh_secret_key_for_prod}
+jwt.refresh-secret=${JWT_REFRESH_SECRET}
 
 # CORS Configuration - Update with your production frontend URL
 cors.allowed-origins=${FRONTEND_URL:https://heartbound-jet.vercel.app}
