Fixed WebSocketConfig to use same CORS

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -15,7 +15,7 @@ jwt.refresh-token-expiration-ms=2592000000
 jwt.refresh-secret=${JWT_REFRESH_SECRET:your_fallback_strong_refresh_secret_key_min_64_chars_and_different}
 
 # CORS Configuration
-cors.allowed-origins=http://localhost:3000
+cors.allowed-origins=http://localhost:3000,https://heartbound-jet.vercel.app
 cors.max-age=3600
 cors.allow-credentials=true
 
