Implemented Discord Text Channel creation on successfull pairs

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -43,6 +43,8 @@ rate.limit.cache-maximum-size=100000
 discord.token=${DISCORD_BOT_TOKEN}
 discord.server.id=${DISCORD_SERVER_ID}
 discord.category.id=${DISCORD_CATEGORY_ID}
+# Category for pairing channels (optional - will use root if not specified)
+discord.pairing.category.id=${DISCORD_PAIRING_CATEGORY_ID:1381698583178383502}
 # Explicitly define required Gateway Intents for the starter
 discord.gateway-intents=GUILD_MEMBERS,GUILD_VOICE_STATES,MESSAGE_CONTENT
 
