--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -52,6 +52,8 @@ rate.limit.cache-maximum-size=100000
 discord.token=${DISCORD_BOT_TOKEN}
 discord.server.id=${DISCORD_SERVER_ID}
 discord.category.id=${DISCORD_CATEGORY_ID}
+# Category for pairing channels (optional - will use root if not specified)
+discord.pairing.category.id=${DISCORD_PAIRING_CATEGORY_ID:1381698583178383502}
 discord.gateway-intents=GUILD_MEMBERS,GUILD_VOICE_STATES,MESSAGE_CONTENT
 
 # Frontend URL for all redirects and callbacks
@@ -62,7 +64,6 @@ backend.base.url=${BACKEND_URL:https://heartbound-d00f1b55e2ad.herokuapp.com/api
 
 # Heroku-specific configurations
 spring.mvc.async.request-timeout=60000
-
 # Chat Activity Rewards Configuration - More conservative in production
 discord.activity.enabled=true
 discord.activity.credits-to-award=5
