--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -10,10 +10,15 @@ spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
-# Connection Pool Settings
-spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.minimum-idle=5
+# Connection Pool Settings - Enhanced for WebSocket Performance
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.minimum-idle=10
 spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.connection-timeout=10000
+spring.datasource.hikari.validation-timeout=3000
+spring.datasource.hikari.max-lifetime=600000
+spring.datasource.hikari.leak-detection-threshold=30000
+spring.datasource.hikari.connection-test-query=SELECT 1
 
 # JWT Configuration - Use environment variables for security
 jwt.secret=${JWT_SECRET}
