Implemented JWT Caching for Performance Fixes

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -26,6 +26,15 @@ jwt.access-token-expiration-ms=900000
 jwt.refresh-token-expiration-ms=2592000000
 jwt.refresh-secret=${JWT_REFRESH_SECRET}
 
+# JWT Performance Caching Configuration - Optimized for production
+jwt.cache.enabled=true
+jwt.cache.token-validation.max-size=25000
+jwt.cache.token-validation.expire-after-write-minutes=8
+jwt.cache.claims.max-size=15000
+jwt.cache.claims.expire-after-write-minutes=8
+jwt.cache.user-details.max-size=15000
+jwt.cache.user-details.expire-after-write-minutes=8
+
 # CORS Configuration - Update with your production frontend URL
 cors.allowed-origins=${FRONTEND_URL:https://heartbound-jet.vercel.app}
 cors.max-age=3600
