--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -14,6 +14,15 @@ jwt.access-token-expiration-ms=900000
 jwt.refresh-token-expiration-ms=2592000000
 jwt.refresh-secret=${JWT_REFRESH_SECRET:your_fallback_strong_refresh_secret_key_min_64_chars_and_different}
 
+# JWT Performance Caching Configuration
+jwt.cache.enabled=true
+jwt.cache.token-validation.max-size=10000
+jwt.cache.token-validation.expire-after-write-minutes=10
+jwt.cache.claims.max-size=5000
+jwt.cache.claims.expire-after-write-minutes=10
+jwt.cache.user-details.max-size=5000
+jwt.cache.user-details.expire-after-write-minutes=10
+
 # CORS Configuration
 cors.allowed-origins=http://localhost:3000,https://heartbound-jet.vercel.app
 cors.max-age=3600
