Optimized ADMIN features for PairingsPage - everything properly working now

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -48,6 +48,18 @@ rate.limit.burst-capacity=120
 rate.limit.cleanup-interval-ms=3600000
 rate.limit.cache-maximum-size=100000
 
+# Pairing System Cache Configuration
+cache.pair-level.max-size=5000
+cache.pair-level.expire-after-write-minutes=15
+cache.achievement.max-size=1000
+cache.achievement.expire-after-write-minutes=60
+cache.voice-streak.max-size=2000
+cache.voice-streak.expire-after-write-minutes=10
+cache.user-profile.max-size=10000
+cache.user-profile.expire-after-write-minutes=30
+cache.batch-operations.max-size=100
+cache.batch-operations.expire-after-write-minutes=5
+
 # Discord Bot Configuration (Values sourced from .env)
 discord.token=${DISCORD_BOT_TOKEN}
 discord.server.id=${DISCORD_SERVER_ID}
