Implemented pairing leaderboards into discord server

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -100,3 +100,7 @@ discord.leveling.level-multiplier=50
 discord.leveling.level-exponent=2
 discord.leveling.level-factor=5
 discord.leveling.credits-per-level=50
+
+# Discord Leaderboard Configuration
+discord.leaderboard.enabled=true
+discord.leaderboard.channel.id=1383120828182564864
