Implemented feature where ChatActivityListener skips Pair chats

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -104,3 +104,10 @@ discord.leveling.credits-per-level=50
 # Discord Leaderboard Configuration
 discord.leaderboard.enabled=true
 discord.leaderboard.channel.id=1383120828182564864
+
+# Discord Pairing Message Validation Configuration (Anti-spam)
+discord.pairing.validation.enabled=true
+discord.pairing.validation.cooldown-seconds=30
+discord.pairing.validation.min-message-length=15
+discord.pairing.validation.time-window-minutes=60
+discord.pairing.validation.message-threshold=10
