Implemented Achievement embed when achievement unlocked

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -105,6 +105,10 @@ discord.leveling.credits-per-level=50
 discord.leaderboard.enabled=true
 discord.leaderboard.channel.id=1383120828182564864
 
+# Discord Achievement Notifications Configuration
+discord.achievements.enabled=true
+discord.achievements.mention-users=true
+
 # Discord Pairing Message Validation Configuration (Anti-spam)
 discord.pairing.validation.enabled=true
 discord.pairing.validation.cooldown-seconds=30
