Pair's can now level up through talking in the chat

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -115,3 +115,11 @@ discord.pairing.validation.cooldown-seconds=30
 discord.pairing.validation.min-message-length=15
 discord.pairing.validation.time-window-minutes=60
 discord.pairing.validation.message-threshold=10
+
+# Discord Pairing XP System Configuration
+discord.pairing.xp.enabled=true
+discord.pairing.xp.per-message=10
+discord.pairing.xp.cooldown-seconds=45
+discord.pairing.xp.min-message-length=20
+discord.pairing.xp.max-per-hour=50
+discord.pairing.xp.show-embeds=true
