--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "react-icons": "^5.5.0",
     "react-image-crop": "^11.0.10",
     "react-router-dom": "^6.22.0",
+    "recharts": "^2.15.3",
     "rollup": "npm:@rollup/wasm-node",
     "sockjs-client": "^1.6.1",
     "tailwind-merge": "^3.0.2",
@@ -46,8 +47,8 @@
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@types/sockjs-client": "^1.5.4",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.17",
     "eslint": "^9.26.0",
