Implemented our Cache to properly utilize DailyMessageTracker

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -62,6 +62,10 @@ rate.limit.burst-capacity=100
 rate.limit.cleanup-interval-ms=3600000
 rate.limit.cache-maximum-size=100000
 
+# Daily Message Activity Cache Configuration - Optimized for production
+cache.daily-activity.max-size=10000
+cache.daily-activity.expire-after-write-minutes=20
+
 # Discord Bot Configuration
 discord.token=${DISCORD_BOT_TOKEN}
 discord.server.id=${DISCORD_SERVER_ID}
