--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -60,6 +60,10 @@ cache.user-profile.expire-after-write-minutes=30
 cache.batch-operations.max-size=100
 cache.batch-operations.expire-after-write-minutes=5
 
+# Daily Message Activity Cache Configuration
+cache.daily-activity.max-size=5000
+cache.daily-activity.expire-after-write-minutes=30
+
 # Discord Bot Configuration (Values sourced from .env)
 discord.token=${DISCORD_BOT_TOKEN}
 discord.server.id=${DISCORD_SERVER_ID}
