/me successfully generates the image - doesn't work properly though

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -127,3 +127,7 @@ discord.pairing.xp.cooldown-seconds=45
 discord.pairing.xp.min-message-length=20
 discord.pairing.xp.max-per-hour=50
 discord.pairing.xp.show-embeds=true
+
+# HTML/CSS to Image API Configuration
+htmlcsstoimage.user_id=${HTML_CSS_TO_IMAGE_USER_ID}
+htmlcsstoimage.api_key=${HTML_CSS_TO_IMAGE_API_KEY}
