Implemented new Daily command

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -64,6 +64,10 @@ cache.batch-operations.expire-after-write-minutes=5
 cache.daily-activity.max-size=5000
 cache.daily-activity.expire-after-write-minutes=30
 
+# Daily Claim Cache Configuration
+cache.daily-claim.max-size=10000
+cache.daily-claim.expire-after-write-minutes=60
+
 # Discord Bot Configuration (Values sourced from .env)
 discord.token=${DISCORD_BOT_TOKEN}
 discord.server.id=${DISCORD_SERVER_ID}
