Added JWT Caching properly to optimize performance

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -29,11 +29,11 @@ jwt.refresh-secret=${JWT_REFRESH_SECRET}
 # JWT Performance Caching Configuration - Optimized for production
 jwt.cache.enabled=true
 jwt.cache.token-validation.max-size=25000
-jwt.cache.token-validation.expire-after-write-minutes=8
-jwt.cache.claims.max-size=15000
-jwt.cache.claims.expire-after-write-minutes=8
-jwt.cache.user-details.max-size=15000
-jwt.cache.user-details.expire-after-write-minutes=8
+jwt.cache.token-validation.expire-after-write-minutes=20
+jwt.cache.claims.max-size=20000
+jwt.cache.claims.expire-after-write-minutes=20
+jwt.cache.user-details.max-size=20000
+jwt.cache.user-details.expire-after-write-minutes=20
 
 # CORS Configuration - Update with your production frontend URL
 cors.allowed-origins=${FRONTEND_URL:https://heartbound-jet.vercel.app}
@@ -98,3 +98,7 @@ discord.leveling.level-multiplier=50
 discord.leveling.level-exponent=2
 discord.leveling.level-factor=5
 discord.leveling.credits-per-level=50
+
+# Production WebSocket Configuration
+server.compression.enabled=true
+server.compression.mime-types=application/json,application/xml,text/html,text/xml,text/plain,application/javascript,text/css
