Fixed Level Roles - will remove previous one before giving the next one"

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -68,6 +68,10 @@ cache.daily-activity.expire-after-write-minutes=30
 cache.daily-claim.max-size=10000
 cache.daily-claim.expire-after-write-minutes=60
 
+# Discord Bot Settings Cache Configuration
+cache.discord-bot-settings.max-size=1
+cache.discord-bot-settings.expire-after-write-minutes=30
+
 # Discord Bot Configuration (Values sourced from .env)
 discord.token=${DISCORD_BOT_TOKEN}
 discord.server.id=${DISCORD_SERVER_ID}
