When User's have the New Members role, will automatically remove it

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -66,6 +66,10 @@ rate.limit.cache-maximum-size=100000
 cache.daily-activity.max-size=10000
 cache.daily-activity.expire-after-write-minutes=20
 
+# Discord Bot Settings Cache Configuration
+cache.discord-bot-settings.max-size=1
+cache.discord-bot-settings.expire-after-write-minutes=30
+
 # Discord Bot Configuration
 discord.token=${DISCORD_BOT_TOKEN}
 discord.server.id=${DISCORD_SERVER_ID}
@@ -98,6 +102,9 @@ discord.leveling.level-multiplier=50
 discord.leveling.level-exponent=2
 discord.leveling.level-factor=5
 discord.leveling.credits-per-level=50
+
+# Discord Starter Role Configuration (removed when user reaches first level milestone)
+discord.leveling.starter-role-id=1303106353014771773
 
 # Production WebSocket Configuration
 server.compression.enabled=true
