--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -113,6 +113,9 @@ discord.leveling.level-exponent=2
 discord.leveling.level-factor=5
 discord.leveling.credits-per-level=50
 
+# Discord Starter Role Configuration (removed when user reaches first level milestone)
+discord.leveling.starter-role-id=1303106353014771773
+
 # Discord Leaderboard Configuration
 discord.leaderboard.enabled=true
 discord.leaderboard.channel.id=1383120828182564864
