Fixed Backend URLs

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -36,7 +36,7 @@ jwt.cache.user-details.max-size=20000
 jwt.cache.user-details.expire-after-write-minutes=20
 
 # CORS Configuration - Update with your production frontend URL
-cors.allowed-origins=${FRONTEND_URL:https://heartbound-jet.vercel.app}
+cors.allowed-origins=${FRONTEND_URL:https://heartbound.net}
 cors.max-age=3600
 cors.allow-credentials=true
 
@@ -79,7 +79,7 @@ discord.pairing.category.id=${DISCORD_PAIRING_CATEGORY_ID:1381698583178383502}
 discord.gateway-intents=GUILD_MEMBERS,GUILD_VOICE_STATES,MESSAGE_CONTENT
 
 # Frontend URL for all redirects and callbacks
-frontend.base.url=${FRONTEND_URL:https://heartbound-jet.vercel.app}
+frontend.base.url=${FRONTEND_URL:https://heartbound.net}
 
 # Backend URL for all redirects and callbacks
 backend.base.url=${BACKEND_URL:https://heartbound-d00f1b55e2ad.herokuapp.com/api}
