--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -24,7 +24,7 @@ jwt.cache.user-details.max-size=10000
 jwt.cache.user-details.expire-after-write-minutes=15
 
 # CORS Configuration
-cors.allowed-origins=http://localhost:3000,https://heartbound-jet.vercel.app
+cors.allowed-origins=http://localhost:3000,https://heartbound.net
 cors.max-age=3600
 cors.allow-credentials=true
 
