Fixed Backend Application to use proper URL

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -36,7 +36,7 @@ jwt.cache.user-details.max-size=20000
 jwt.cache.user-details.expire-after-write-minutes=20
 
 # CORS Configuration - Update with your production frontend URL
-cors.allowed-origins=${FRONTEND_URL:https://heartbound.net}
+cors.allowed-origins=http://localhost:3000,https://heartbound.net,https://www.heartbound.net
 cors.max-age=3600
 cors.allow-credentials=true
 
