Implemented Prison Command with Caching - properly working

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -70,6 +70,10 @@ cache.daily-activity.expire-after-write-minutes=20
 cache.discord-bot-settings.max-size=1
 cache.discord-bot-settings.expire-after-write-minutes=30
 
+# Prison Cache Configuration - Production optimized
+cache.prison.max-size=1000
+cache.prison.expire-after-write-hours=72
+
 # Discord Bot Configuration
 discord.token=${DISCORD_BOT_TOKEN}
 discord.server.id=${DISCORD_SERVER_ID}
