--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -72,6 +72,10 @@ cache.daily-claim.expire-after-write-minutes=60
 cache.discord-bot-settings.max-size=1
 cache.discord-bot-settings.expire-after-write-minutes=30
 
+# Prison Cache Configuration
+cache.prison.max-size=1000
+cache.prison.expire-after-write-hours=72
+
 # Discord Bot Configuration (Values sourced from .env)
 discord.token=${DISCORD_BOT_TOKEN}
 discord.server.id=${DISCORD_SERVER_ID}
