Removed Email from Discord OAuth2 - didn't need it, nor use it

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -50,7 +50,7 @@ logging.level.com.zgamelogic=INFO
 discord.client-id=${DISCORD_CLIENT_ID}
 discord.client-secret=${DISCORD_CLIENT_SECRET}
 discord.redirect-uri=${DISCORD_REDIRECT_URI:https://heartbound-api.herokuapp.com/api/oauth2/callback/discord}
-discord.scopes=identify email guilds.join guilds
+discord.scopes=identify guilds.join guilds
 
 # Admin configuration
 admin.discord.id=${ADMIN_DISCORD_ID}
