--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -36,7 +36,7 @@ logging.level.com.app.heartbound=DEBUG
 discord.client-id=${DISCORD_CLIENT_ID}
 discord.client-secret=${DISCORD_CLIENT_SECRET}
 discord.redirect-uri=http://localhost:8080/api/oauth2/callback/discord
-discord.scopes=identify email guilds.join guilds
+discord.scopes=identify guilds.join guilds
 
 # Admin configuration
 admin.discord.id=${ADMIN_DISCORD_ID}
