Implemented Counting Game - needs testing

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -76,6 +76,10 @@ cache.discord-bot-settings.expire-after-write-minutes=30
 cache.prison.max-size=1000
 cache.prison.expire-after-write-hours=72
 
+# Counting Game Cache Configuration
+cache.counting-game.max-size=100
+cache.counting-game.expire-after-write-minutes=15
+
 # Discord Bot Configuration (Values sourced from .env)
 discord.token=${DISCORD_BOT_TOKEN}
 discord.server.id=${DISCORD_SERVER_ID}
