Embed Changes for giveaway, checks for level roles instead of actual levels, still needs testing

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -80,6 +80,10 @@ cache.prison.expire-after-write-hours=72
 cache.counting-game.max-size=100
 cache.counting-game.expire-after-write-minutes=15
 
+# Giveaway Cache Configuration
+cache.giveaway.max-size=200
+cache.giveaway.expire-after-write-minutes=10
+
 # Discord Bot Configuration (Values sourced from .env)
 discord.token=${DISCORD_BOT_TOKEN}
 discord.server.id=${DISCORD_SERVER_ID}
