Added Rate Limiting - Implemented onto Shop, and Inventory controllers

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -48,6 +48,22 @@ rate.limit.burst-capacity=120
 rate.limit.cleanup-interval-ms=3600000
 rate.limit.cache-maximum-size=100000
 
+# Enhanced Rate Limiting for Financial Endpoints
+rate.limit.purchase.per-minute=5
+rate.limit.purchase.per-hour=20
+rate.limit.purchase.burst-capacity=6
+
+rate.limit.case-open.per-minute=10
+rate.limit.case-open.per-hour=50
+rate.limit.case-open.burst-capacity=12
+
+rate.limit.equip.per-minute=30
+rate.limit.equip.per-hour=200
+rate.limit.equip.burst-capacity=35
+
+# Rate Limiting Metrics Configuration
+rate.limit.metrics-cleanup-interval-ms=7200000
+
 # Pairing System Cache Configuration
 cache.pair-level.max-size=5000
 cache.pair-level.expire-after-write-minutes=15
