Implemented Backend HTML/Script Sanitization's, implemented into shop

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,9 +22,11 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@rollup/rollup-linux-x64-gnu": "npm:@rollup/wasm-node",
     "@stomp/stompjs": "^7.0.0",
+    "@types/dompurify": "^3.0.5",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dompurify": "^3.2.6",
     "esbuild": "0.25.1",
     "framer-motion": "^12.4.10",
     "frontend": "file:",
