Implemented Backend HTML/Script Sanitization's, implemented into shop

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -140,6 +140,13 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+		
+		<!-- OWASP HTML Sanitizer for XSS Prevention -->
+		<dependency>
+			<groupId>com.googlecode.owasp-java-html-sanitizer</groupId>
+			<artifactId>owasp-java-html-sanitizer</artifactId>
+			<version>20220608.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
