--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -113,3 +113,16 @@ discord.leveling.starter-role-id=1303106353014771773
 # Production WebSocket Configuration
 server.compression.enabled=true
 server.compression.mime-types=application/json,application/xml,text/html,text/xml,text/plain,application/javascript,text/css
+
+# HTML Sanitization Configuration - Production (Strict)
+html.sanitization.enabled=true
+html.sanitization.strict-mode=true
+html.sanitization.log-sanitization=true
+html.sanitization.max-item-name-length=100
+html.sanitization.max-description-length=500
+
+# Security Headers Configuration - Production (Strict)
+security.csp.enabled=true
+security.csp.report-only=false
+security.csp.report-uri=/api/security/csp-report
+security.headers.enabled=true
