--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -61,6 +61,19 @@ rate.limit.equip.per-minute=30
 rate.limit.equip.per-hour=200
 rate.limit.equip.burst-capacity=35
 
+# HTML Sanitization Configuration
+html.sanitization.enabled=true
+html.sanitization.strict-mode=true
+html.sanitization.log-sanitization=true
+html.sanitization.max-item-name-length=100
+html.sanitization.max-description-length=500
+
+# Security Headers Configuration
+security.csp.enabled=true
+security.csp.report-only=false
+security.csp.report-uri=
+security.headers.enabled=true
+
 # Rate Limiting Metrics Configuration
 rate.limit.metrics-cleanup-interval-ms=7200000
 
