--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -183,3 +183,20 @@ discord.pairing.xp.show-embeds=true
 # HTML/CSS to Image API Configuration
 htmlcsstoimage.user_id=${HTML_CSS_TO_IMAGE_USER_ID}
 htmlcsstoimage.api_key=${HTML_CSS_TO_IMAGE_API_KEY}
+
+# Secure Random Configuration
+secure.random.algorithm=SHA1PRNG
+secure.random.provider=SUN
+secure.random.seed.refresh.interval=3600000
+secure.random.pool.size=1000
+
+# Roll Verification Configuration
+roll.verification.chi-square.threshold=10.83
+roll.verification.win-rate.tolerance=5.0
+roll.verification.high-frequency.threshold=50
+roll.verification.pattern.window.hours=24
+
+# Roll Audit Configuration
+roll.audit.enabled=true
+roll.audit.retention.days=90
+roll.audit.batch.size=100
